--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">MyPos</string>
     <string name="action_settings">Settings</string>
+    <string name="convert_string">Convertir</string>
+    <string name="dollars_hint">dólares</string>
+    <string name="no_value_string">No Value</string>
+    <string name="convesion2">Convesion2</string>
+    <string name="textview2">TextView2</string>
 </resources>
